compiler/tests/fixtures/valid/role_with_is_pool.viv
// Role using 'is' casting pool directive

action inspect-weapon:
    roles:
        @inspector:
            as: initiator
        @weapon:
            as: item
            is: @inspector.equipped_weapon
