compiler/tests/fixtures/invalid/semantics/missing_pool_for_action_role.viv
// Invalid: action role without pool directive

action missing-pool:
    roles:
        @actor:
            as: initiator
        &flag:
            as: symbol
